# docker-ubuntu-gcc10

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml
base/: Dockerfile  build.sh  test.sh
clang/: Dockerfile  clang  clang++  clang6.Dockerfile  legacy.Dockerfile
clang11/: Dockerfile  test.sh
conanfy/: Dockerfile  clang.Dockerfile  conanfile.py  gcc.Dockerfile
final/: Dockerfile
gcc/: Dockerfile
gcc10/: Dockerfile  test.sh
gcc10-conanfy/: Dockerfile
gcc10_libs/: Dockerfile
gcc8/: Dockerfile
gcc8-conanfy/: Dockerfile
gcc9/: Dockerfile
gcc9-conanfy/: Dockerfile  conanfile.py
libstdcpp/: README
test/: CMakeLists.txt  conanfile.py  main.cpp  run.sh  run_test.sh  test.sh
test/clang/: Dockerfile  run.sh  run_test.sh  test_conan.sh  test_docker.sh
test/clang/conan/: CMakeLists.txt  conanfile.py  main.c  main.cpp  run.sh  test_conan.sh
test/conan/: CMakeLists.txt  conanfile.py  main.cpp
test/gcc/: run.sh  run_test.sh  test_docker.sh
test/gcc/conan/: run.sh  test_conan.sh
test/gcc/fortran/: run.sh
test/package/: build_boost.sh  build_gtest.sh  build_poco.sh  build_protobuf.sh  run.sh
test/simple/: CMakeLists.txt  main.c  main.cpp  run.sh  test_docker.sh  test_simple.sh
test/standard/: build_imagl.sh  build_libsolace.sh  run.sh
test/system/: conanfile.txt  main.cpp  run.sh
